--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 
 <form method="POST" action="/checkout">
   
-  <p></p>Enter Item:   
+ <p>Enter Item: <input id="item" name="item_1" type="text">   </p> 
   
   
   
