Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 
-<form method="POST" action="/checkout">
+<form action="/checkout" method="POST" >
   
- <p>Enter Item: <input id="item" name="item_1" type="text">   </p> 
+ <p>Enter Item: <input type="text" name="item">   </p> 
   
   
   
