Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,11 @@
 <html>
+  <body>
 <form action="/checkout" method="POST" >
   
  <p>Enter Item: <input type="text" name="item">   </p> 
   
   
   
-</form></html>
+</form>
+</body>
+</html>
