Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <form action="/checkout" method="POST" >
   
  <p>Enter Item: <input type="text" name="item">   </p> 
-  
+  <input id="submit" type="submit" value="sumbit">
   
   
 </form>
