Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   <body>
 <form action="/checkout" method="POST" >
   
- <p>Enter Item: <input type="text" name="item">   </p> 
+ <p>Item: <input type="text" name="item">   </p> 
   <input id="submit" type="submit" value="sumbit">
   
   
